tests/baselines/reference/parseCommaSeperatedNewlineString.errors.txt
tests/cases/compiler/parseCommaSeperatedNewlineString.ts(1,2): error TS2304: Cannot find name 'a'.


==== tests/cases/compiler/parseCommaSeperatedNewlineString.ts (1 errors) ====
    (a,
     ~
!!! error TS2304: Cannot find name 'a'.
    '')